<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PascalHelp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="system_pascal_abc_net">Система PascalABC.NET</string>
    <string name="simple_data_types">Простые типы данных</string>
    <string name="boolean_type">Логический тип (BOOLEAN)</string>
    <string name="conditional_operator">Условный оператор (IF)</string>
    <string name="selection_operator">Оператор выбора (CASE)</string>
    <string name="loop_operators">Операторы цикла (WHILE, REPEAT, FOR)</string>
    <string name="arrays">Массивы (ARRAY)</string>
    <string name="string_type">Строковый тип (STRING)</string>
    <string name="procedure_and_function">Процедура и функции</string>
    <string name="function">Функция (FUNCTION)</string>
    <string name="working_with_files_in_pascal">Работа с файлами в паскале</string>
    <string name="PascalABC_NET">PascalABC.NET</string>
    <string name="Integer_types">Целые типы</string>
    <string name="Real_types">Вещественные типы</string>
    <string name="Character_type">Символьный тип</string>
    <string name="Enumerable_and_range_types">Перечислимый и диапазонный типы</string>
    <string name="Boolean_type">Логический тип</string>
    <string name="Selection_operator">Оператор выбора</string>
    <string name="Conditional_operation">Условная операция</string>
    <string name="PascalABC_NET_description">
        – это система программирования и язык Pascal нового поколения для платформы Microsoft .NET.
        Язык PascalABC.NET содержит все основные элементы современных языков программирования:
        модули, классы, перегрузку операций, интерфейсы, исключения, обобщенные классы, сборку
        мусора, лямбда-выражения, а также некоторые средства параллельности, в том числе директивы
        OpenMP. Система PascalABC.NET включает в себя также простую интегрированную среду,
        ориентированную на эффективное обучение современному программированию.
    </string>
    <string name="Integer_types_description">
        Ниже приводится таблица целых типов, содержащая также их размер и диапазон допустимых значений.
        Тип	Размер, байт	Диапазон значений
        shortint	1	-128..127
        smallint	2	-32768..32767
        integer, longint	4	-2147483648..2147483647
        int64	8	-9223372036854775808..9223372036854775807
        byte	1	0..255
        word	2	0..65535
        longword, cardinal	4	0..4294967295
        uint64	8	0..18446744073709551615
        BigInteger	переменный	неограниченный
        Типы integer и longint, а также longword и cardinal являются синонимами.

        Максимальные значения для каждого целого типа определены как внешние стандартные константы: MaxInt64, MaxInt, MaxSmallInt, MaxShortInt, MaxUInt64, MaxLongWord, MaxWord, MaxByte.

        Для каждого целого типа T кроме BigInteger определены следующие константы как статические члены:

        T.MinValue - константа, представляющая минимальное значение типа T;

        T.MaxValue - константа, представляющая максимальное значение типа T;

        Для каждого целого типа T определены статические функции:

        T.Parse(s) - функция, конвертирующая строковое представление числа в значение типа T. Если преобразование невозможно, то генерируется исключение;

        T.TryParse(s,res) - функция, конвертирующая строковое представление числа в значение типа T и записывающая его в переменную res. Если преобразование возможно, то возвращается значение True, в противном случае - False.

        Кроме того, для T определена экземплярная функция ToString, возвращающая строковое представление переменной данного типа.

        Константы целого типа могут представляться как в десятичной, так и в шестнадцатеричной форме, перед шестнадцатеричной константой ставится знак $:

        25   3456   $FFFF
    </string>
    <string name="Real_types_description">
        Ниже приводится таблица вещественных типов, содержащая их размер, количество значащих цифр и диапазон допустимых значений:

        Тип	Размер, байт	Количество
        значащих цифр	Диапазон значений
        real	8	15-16	-1.8∙10308 .. 1.8∙10308
        double	8	15-16	-1.8∙10308 .. 1.8∙10308
        single	4	7-8	-3.4∙1038 .. 3.4∙1038
        decimal	16	28-29	-79228162514264337593543950335 .. 79228162514264337593543950335
        Типы real и double являются синонимами. Самое маленькое положительное число типа real приблизительно равно 5.0∙10-324, для типа single оно составляет приблизительно 1.4∙10-45.

        Максимальные значения для каждого вещественного типа определены как внешние стандартные константы: MaxReal, MaxDouble и MaxSingle.

        Для каждого вещественного типа R кроме decimal определены также следующие константы как статические члены класса:

        R.MinValue - константа, представляющая минимальное значение типа R;

        R.MaxValue - константа, представляющая максимальное значение типа R;

        R.Epsilon - константа, представляющая самое маленькое положительное число типа R;

        R.NaN - константа, представляющая не число (возникает, например, при делении 0/0);

        R.NegativeInfinity - константа, представляющая отрицательную бесконечность (возникает, например, при делении -2/0);

        R.PositiveInfinity - константа, представляющая положительную бесконечность (возникает, например, при делении 2/0).

        Для каждого вещественного типа R кроме decimal определены следующие статические функции:

        R.IsNaN(r) - возвращает True, если в r хранится значение R.NaN, и False в противном случае;

        R.IsInfinity(r) - возвращает True, если в r хранится значение R.PositiveInfinity или R.NegativeInfinity, и False в противном случае;

        R.IsPositiveInfinity(r) - возвращает True, если в r хранится значение R.PositiveInfinity, и False в противном случае;

        R.IsNegativeInfinity(r) - возвращает True, если в r хранится значение R.NegativeInfinity, и False в противном случае;

        Для каждого вещественного типа R определены следующие статические функции:

        R.Parse(s) - функция, конвертирующая строковое представление числа в значение типа R. Если преобразование невозможно, то генерируется исключение;

        R.TryParse(s,res) функция, конвертирующая строковое представление числа в значение типа R и записывающая его в переменную res. Если преобразование возможно, то возвращается значение True, в противном случае - False.

        Кроме того, определена экземплярная функция ToString, возвращающая строковое представление переменной типа R.

        Вещественные константы можно записывать как в форме с плавающей точкой, так и в экспоненциальной форме:

        1.7    0.013    2.5e3 (2500)    1.4e-1 (0.14)
    </string>
    <string name="Character_type_description">
                Символьный тип char занимает 2 байта и хранит Unicode-символ. Символы реализуются типом System.Char платформы .NET.

        Операция + для символов означает конкатенацию (слияние) строк. Например: \'a\'+\'b\' = \'ab\'. Как и для строк, если к символу прибавить число, то число предварительно преобразуется к строковому представлению:

        var s: string := \' \'+15; // s = \' 15\'
        var s1: string := 15+\' \'; // s = \'15 \'

        Для преобразования между символами и их кодами в кодировке Unicode используются стандартные функции Chr и Ord:

        Chr(n) - функция, возвращающая символ с кодом n в кодировке Unicode;
        Ord(с) - функция, возвращающая значение типа word, представляющее собой код символа c в кодировке Unicode.

        Для преобразования между символами и их кодами в кодировке Windows используются стандартные функции ChrAnsi и OrdAnsi:

        ChrAnsi(w) - возвращает символ с кодом w в кодировке Windows;
        OrdAnsi(с) - возвращает значение типа byte, представляющее собой код символа c в кодировке Windows.

        Кроме того, выражение #число возвращает Unicode-символ с кодом число (число должно находиться в диапазоне от 0 до 65535).

        Аналогичную роль играют явные преобразования типов:

        char(w) возвращает символ с кодом w в кодировке Unicode;
        word(с) возвращает код символа c в кодировке Unicode.

        Стандартные подпрограммы работы с символами.

        Статические методы типа char.
    </string>
    <string name="Enumerable_and_range_types_description">
        Перечислимый тип определяется упорядоченным набором идентификаторов.

        type typeName = (value1, value2, …, valuen);

        Значения перечислимого типа занимают 4 байта. Каждое значение value представляет собой константу типа typeName, попадающую в текущее пространство имен.

        Например:

        type
          Season = (Winter,Spring,Summer,Autumn);
          DayOfWeek = (Mon,Tue,Wed,Thi,Thr,Sat,Sun);

        К константе перечислимого типа можно обращаться непосредственно по имени, а можно использовать запись typeName.value, в которой имя константы уточняется именем перечислимого типа, к которому она принадлежит:

        var a: DayOfWeek;
        a := Mon;
        a := DayOfWeek.Wed;

        Для перечислимого типа определена экземплярная функция ToString, возвращающая строковое представление переменной перечислимого типа. При выводе значения перечислимого типа с помощью процедуры write также выводится строковое представление значения перечислимого типа.

        Например:

        type Season = (Winter,Spring,Summer,Autumn);
        var s: Season;
        begin
          s := Summer;
          writeln(s.ToString); // Summer
          writeln(s); // Summer
        end.
    </string>
    <string name="Boolean_type_description">
        Значения логического типа boolean занимают 1 байт и принимают одно из двух значений, задаваемых предопределенными константами True (истина) и False (ложь).

        Для логического типа определены статические методы:

        boolean.Parse(s) - функция, конвертирующая строковое представление числа в значение типа boolean. Если преобразование невозможно, то генерируется исключение;

        boolean.TryParse(s,res) - функция, конвертирующая строковое представление числа в значение типа boolean и записывающая его в переменную res. Если преобразование возможно, то возвращается значение True, в противном случае - False.

        Кроме этого, определена экземплярная функция ToString, возвращающая строковое представление переменной типа boolean.
    </string>
    <string name="Conditional_operation_description">
        <![CDATA[Условная операция имеет следующий вид: условие ? выражение1 : выражение2 Если
        условие выполняется, то результатом является значение выражения1, иначе значение выражения2.
        Например: var min := a < b ? a : b; Нетрудно видеть, что условная операция позволяет в простых
        случаях не использовать условный оператор. Например, предыдущий код для вещественных a и b
        эквивалентен следующему: var min: real; if a<b then min := a else min := b;]]>
    </string>
</resources>