<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SimpleDataTypes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_indent_in_the_section"
        android:orientation="vertical">

        <TextView
            style="@style/title_in_the_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Integer_types"/>

        <TextView
            style="@style/plain_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Integer_types_description"/>

        <TextView
            style="@style/title_in_the_text"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Real_types"/>

        <TextView
            style="@style/plain_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Real_types_description"/>

        <TextView
            style="@style/title_in_the_text"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Character_type"/>

        <TextView
            style="@style/plain_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Character_type_description"/>

        <TextView
            style="@style/title_in_the_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Enumerable_and_range_types"/>

        <TextView
            style="@style/plain_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Enumerable_and_range_types_description"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>